# enterprise-agent

./: Article.md  LICENSE  README.md
enterprise-agent/: Dockerfile  docker-compose.yml  pyproject.toml
enterprise-agent/app/: main.py
enterprise-agent/app/agents/: graph.py
enterprise-agent/app/guardrails/: pipeline.py
enterprise-agent/app/llm/: client.py
enterprise-agent/app/observability/: tracing.py
